k8s/namespaces/base/home-system/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mosquitto
  namespace: home-system
spec:
  podSelector:
    matchLabels:
      name: mosquitto
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: zigbee2mqtt
      ports:
        - port: 1883
    - from:
        - podSelector:
            matchLabels:
              name: home-assistant
      ports:
        - port: 1883
  egress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: home-assistant
  namespace: home-system
spec:
  podSelector:
    matchLabels:
      name: home-assistant
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-ingress
          podSelector:
            matchLabels:
              app: istio-ingressgateway
      ports:
        - port: 8123
        - port: 12321
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              name: mosquitto
      ports:
        - port: 1883
    # Home-Assistant tries to reach out to multicast and other services
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 1900
          protocol: UDP
        - port: 5353
          protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zigbee2mqtt
  namespace: home-system
spec:
  podSelector:
    matchLabels:
      name: zigbee2mqtt
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-ingress
          podSelector:
            matchLabels:
              app: istio-ingressgateway
      ports:
        - port: 8080
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              name: mosquitto
      ports:
        - port: 1883
    # Zigbee2mqtt runs on its own dedicated loadbalancer IP
    - to:
        - ipBlock:
            cidr: 192.168.1.165/32
      ports:
        - port: 6638
          protocol: TCP
